<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailsView">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glh1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <include
        layout="@layout/ly_busqueda"
        android:id="@+id/lyBusqueda"/>

    <ScrollView
        android:id="@+id/svDetalle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/glv1"
        app:layout_constraintEnd_toEndOf="@id/glv2"
        app:layout_constraintTop_toBottomOf="@id/glh1"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivProducto"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:layout_marginTop="5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNombreProducto"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/lyPuntos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingTop="8sp"
                app:layout_constraintEnd_toEndOf="@+id/recyclerView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/recyclerView"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

            <TableLayout
                android:id="@+id/lyContenidoDetalle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lyPuntos">

                <TextView
                    android:id="@+id/tvPrecioAnterior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/tvPrecioActual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/ver_los_medio_de_pago"
                    android:textColor="@color/blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/stock_disponible" />

                <LinearLayout
                    android:id="@+id/lyElegirCantidad"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="15sp"
                    android:background="@drawable/bg_btn_agregar_cantidad"
                    android:orientation="horizontal"
                    android:padding="5sp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvCantidadMin"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:paddingStart="10dp"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvCantidadStock"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/grey"
                        android:textSize="16sp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/right"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnComprar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:background="@drawable/bg_btn_comprar"
                    android:text="@string/comprar_ahora"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnAgregar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/bg_btn_agregar"
                    android:text="@string/agregar_al_carrito"
                    android:textAllCaps="false"
                    android:textColor="@color/blueDark"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginBottom="10sp"
                    android:background="@color/greyLight"
                    tools:ignore="SmallSp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caracteristicas_del_producto"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </TableLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>